oss/yaml/ttyd/oauth2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-svc
  namespace: ttyd
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
    - name: https
      port: 443
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
